2008-09-25  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented
	length() and ddx().

2008-08-04  Stefan Jahn  <stefan@lkcc.org>

	* htmldatafetcher.cpp (fetchChapterTexts): Avoid collecting
	"mailto:" links for the available html sources.

	* docs/cs/Makefile.am (docdatadir): Added Czech translations of
	internal help system.  Thanks to Martin Stejskal.  Still things to
	do here...

2008-02-17  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Documented new P and E number suffixes.

2008-01-29  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Added number suffix documentation.

2008-01-12  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/*.html: Fixed some spelling mistakes.  Thanks to
	Norbert!

2007-12-31  Stefan Jahn  <stefan@lkcc.org>

	* docs/ru/mathfunc.html: Updated Russian translations.

2007-11-03  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/mathfunc.html: Reordered math functionality.  Thanks to
	Gunther.

	* docs/en/mathfunc.html: Added descriptions of logical operators.

2007-11-01  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Documented new functions StabMeasure()
	and StabFactor().  Fixed phase()-link.

2007-10-27  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Reordered math functionality.  Thanks to
	Gunther.

2007-09-26  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented random
	functions as well as general nomenclature for real and complex
	numbers, vectors and matrices.

2007-08-16  Stefan Jahn  <stefan@lkcc.org>

	* docs/uk/index.html: Updated Ukrainian translations.

2007-06-16  Stefan Jahn  <stefan@lkcc.org>

	* docs/uk/start.html: Added Ukrainian translations of the internal
	help system.

2007-05-24  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented the new
	constant "q" and the vt() function.

2007-03-31  Stefan Jahn  <stefan@lkcc.org>
