@@ -1,9 +1,9 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-<meta name="Author" content="Michael Margraf">
-<title>Qucs - List of Special Characters</title>
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
+<meta name="Author" content="Martin Stejskal">
+<title>Qucs - Seznam speciálních symbolů</title>
 </head>
 
 
@@ -15,22 +15,22 @@
 - Qucs -<br>
 Quite Universal Circuit Simulator<br>
 </h3>
-<h1>
-List of Special Characters<br><br>
+Seznam speciálních symbolů<br><br>
 </h1></center>
-
-It is possible to use special characters in the text painting and
-in the text of the diagram axis labels. This is done by using
-LaTeX tags. The following table contains a list of currently
-available characters.<br><br>
-<b>Note:</b> Which of those characters are correctly displayed
-depends on the font used by Qucs!
+V Qucs je možné použít speciální symboly v textu kreseb a
+v diagramech u popisků os. Tohoto efektu je dosaženo pomocí
+LaTeX tagů. Následující tabulka obsahuje aktuální seznam
+dostupných symbolů..<br><br>
+<b>Poznámka:</b> Zda se vám správně zobrazí daný symbol, či ne
+závisí na typu písma, které používá Qucs!
+<br>
+Proto si prosím volte takový typ písma, který dokáže zobrazit dané znaky.
 <br><br>
 
-<b>Small Greek letters</b>
+<b>Malá řecká písmena</b>
 <table cellspacing=2 cellpadding=2>
-<tr><td>LaTeX tag</td><td>Unicode</td><td>Description</td></tr>
-<tr><td><tt>\alpha</tt></td><td>0x03B1</td><td>alpha</td></tr>
+<tr><td>LaTeX tag</td><td>Unicode</td><td>Popis</td></tr>
+<tr><td><tt>\alpha</tt></td><td>0x03B1</td><td>alfa</td></tr>
 <tr><td><tt>\beta</tt></td><td>0x03B2</td><td>beta</td></tr>
 <tr><td><tt>\gamma</tt></td><td>0x03B3</td><td>gamma</td></tr>
 <tr><td><tt>\delta</tt></td><td>0x03B4</td><td>delta</td></tr>
@@ -44,14 +44,14 @@ depends on the font used by Qucs!
 <tr><td><tt>\mu</tt></td><td>0x03BC</td><td>mu</td></tr>
 <tr><td><tt>\textmu</tt></td><td>0x00B5</td><td>mu</td></tr>
 <tr><td><tt>\nu</tt></td><td>0x03BD</td><td>nu</td></tr>
-<tr><td><tt>\xi</tt></td><td>0x03BE</td><td>xi</td></tr>
-<tr><td><tt>\pi</tt></td><td>0x03C0</td><td>pi</td></tr>
-<tr><td><tt>\varpi</tt></td><td>0x03D6</td><td>pi</td></tr>
-<tr><td><tt>\rho</tt></td><td>0x03C1</td><td>rho</td></tr>
-<tr><td><tt>\varrho</tt></td><td>0x03F1</td><td>rho</td></tr>
+<tr><td><tt>\xi</tt></td><td>0x03BE</td><td>xí</td></tr>
+<tr><td><tt>\pi</tt></td><td>0x03C0</td><td>pí</td></tr>
+<tr><td><tt>\varpi</tt></td><td>0x03D6</td><td>pí</td></tr>
+<tr><td><tt>\rho</tt></td><td>0x03C1</td><td>rhó</td></tr>
+<tr><td><tt>\varrho</tt></td><td>0x03F1</td><td>rhó</td></tr>
 <tr><td><tt>\sigma</tt></td><td>0x03C3</td><td>sigma</td></tr>
 <tr><td><tt>\tau</tt></td><td>0x03C4</td><td>tau</td></tr>
-<tr><td><tt>\upsilon</tt></td><td>0x03C5</td><td>upsilon</td></tr>
+<tr><td><tt>\upsilon</tt></td><td>0x03C5</td><td>epsilon</td></tr>
 <tr><td><tt>\phi</tt></td><td>0x03C6</td><td>phi</td></tr>
 <tr><td><tt>\chi</tt></td><td>0x03C7</td><td>chi</td></tr>
 <tr><td><tt>\psi</tt></td><td>0x03C8</td><td>psi</td></tr>
@@ -59,51 +59,51 @@ depends on the font used by Qucs!
 </table>
 <br>
 
-<b>Capital Greek letters</b>
+<b>Velká řecká písmena</b>
 <table cellspacing=2 cellpadding=2>
-<tr><td>LaTeX tag</td><td>Unicode</td><td>Description</td></tr>
+<tr><td>LaTeX tag</td><td>Unicode</td><td>Popis</td></tr>
 <tr><td><tt>\Gamma</tt></td><td>0x0393</td><td>Gamma</td></tr>
 <tr><td><tt>\Delta</tt></td><td>0x0394</td><td>Delta</td></tr>
 <tr><td><tt>\Theta</tt></td><td>0x0398</td><td>Theta</td></tr>
 <tr><td><tt>\Lambda</tt></td><td>0x039B</td><td>Lambda</td></tr>
-<tr><td><tt>\Xi</tt></td><td>0x039E</td><td>Xi</td></tr>
-<tr><td><tt>\Pi</tt></td><td>0x03A0</td><td>Pi</td></tr>
+<tr><td><tt>\Xi</tt></td><td>0x039E</td><td>Xí</td></tr>
+<tr><td><tt>\Pi</tt></td><td>0x03A0</td><td>Pí</td></tr>
 <tr><td><tt>\Sigma</tt></td><td>0x03A3</td><td>Sigma</td></tr>
-<tr><td><tt>\Upsilon</tt></td><td>0x03A5</td><td>Upsilon</td></tr>
+<tr><td><tt>\Upsilon</tt></td><td>0x03A5</td><td>Epsilon</td></tr>
 <tr><td><tt>\Phi</tt></td><td>0x03A6</td><td>Phi</td></tr>
 <tr><td><tt>\Psi</tt></td><td>0x03A8</td><td>Psi</td></tr>
 <tr><td><tt>\Omega</tt></td><td>0x03A9</td><td>Omega</td></tr>
 </table>
 <br>
 
-<b>Mathematical symbols</b>
+<b>Matematické symboly</b>
 <table cellspacing=2 cellpadding=2>
-<tr><td>LaTeX tag</td><td>Unicode</td><td>Description</td></tr>
-<tr><td><tt>\cdot</tt></td><td>0x00B7</td><td>multiplication dot (centered dot)</td></tr>
-<tr><td><tt>\times</tt></td><td>0x00D7</td><td>multiplication cross</td></tr>
-<tr><td><tt>\pm</tt></td><td>0x00B1</td><td>plus minus sign</td></tr>
-<tr><td><tt>\mp</tt></td><td>0x2213</td><td>minus plus sign</td></tr>
-<tr><td><tt>\partial</tt></td><td>0x2202</td><td>partial differentiation symbol</td></tr>
-<tr><td><tt>\nabla</tt></td><td>0x2207</td><td>nabla operator</td></tr>
-<tr><td><tt>\infty</tt></td><td>0x221E</td><td>infinity symbol</td></tr>
-<tr><td><tt>\int</tt></td><td>0x222B</td><td>integral symbol</td></tr>
-<tr><td><tt>\approx</tt></td><td>0x2248</td><td>approximation symbol (waved equal sign)</td></tr>
-<tr><td><tt>\neq</tt></td><td>0x2260</td><td>not equal sign</td></tr>
-<tr><td><tt>\in</tt></td><td>0x220A</td><td>"contained in" symbol</td></tr>
-<tr><td><tt>\leq</tt></td><td>0x2264</td><td>less-equal sign</td></tr>
-<tr><td><tt>\geq</tt></td><td>0x2265</td><td>greater-equal sign</td></tr>
-<tr><td><tt>\sim</tt></td><td>0x223C</td><td>(central european) proportional sign</td></tr>
-<tr><td><tt>\propto</tt></td><td>0x221D</td><td>(american) proportional sign</td></tr>
-<tr><td><tt>\diameter</tt></td><td>0x00F8</td><td>diameter sign (also sign for average)</td></tr>
-<tr><td><tt>\onehalf</tt></td><td>0x00BD</td><td>one half</td></tr>
-<tr><td><tt>\onequarter</tt></td><td>0x00BC</td><td>one quarter</td></tr>
-<tr><td><tt>\twosuperior</tt></td><td>0x00B2</td><td>square (power of two)</td></tr>
-<tr><td><tt>\threesuperior</tt></td><td>0x00B3</td><td>power of three</td></tr>
-<tr><td><tt>\ohm</tt></td><td>0x03A9</td><td>unit for resistance (capital Greek omega)</td></tr>
+<tr><td>LaTeX tag</td><td>Unicode</td><td>Popis</td></tr>
+<tr><td><tt>\cdot</tt></td><td>0x00B7</td><td>Mnohonásobné body (střed bodu)</td></tr>
+<tr><td><tt>\times</tt></td><td>0x00D7</td><td>Mnohonásobný křížek</td></tr>
+<tr><td><tt>\pm</tt></td><td>0x00B1</td><td>Znak plus mínus</td></tr>
+<tr><td><tt>\mp</tt></td><td>0x2213</td><td>Znak mínus plus</td></tr>
+<tr><td><tt>\partial</tt></td><td>0x2202</td><td>Symbol pro částečné derivování</td></tr>
+<tr><td><tt>\nabla</tt></td><td>0x2207</td><td>Operátor nabla</td></tr>
+<tr><td><tt>\infty</tt></td><td>0x221E</td><td>Symbol nekonečno</td></tr>
+<tr><td><tt>\int</tt></td><td>0x222B</td><td>Symbol integrátu</td></tr>
+<tr><td><tt>\approx</tt></td><td>0x2248</td><td>Symbol pro approximaci</td></tr>
+<tr><td><tt>\neq</tt></td><td>0x2260</td><td>Znaménko nerovnosti</td></tr>
+<tr><td><tt>\in</tt></td><td>0x220A</td><td>Symbol "obsaženo v"</td></tr>
+<tr><td><tt>\leq</tt></td><td>0x2264</td><td>Znaménko menší, nebo rovno</td></tr>
+<tr><td><tt>\geq</tt></td><td>0x2265</td><td>Znaménko větší než</td></tr>
+<tr><td><tt>\sim</tt></td><td>0x223C</td><td>Znaménko pro přímou úměru (střední Evropa)</td></tr>
+<tr><td><tt>\propto</tt></td><td>0x221D</td><td>Znaménko pro přímou úměru (Amerika)</td></tr>
+<tr><td><tt>\diameter</tt></td><td>0x00F8</td><td>Znaménko pro průměr kružnice  (také znaménko pro aritmetický průměr)</td></tr>
+<tr><td><tt>\onehalf</tt></td><td>0x00BD</td><td>Jedna polovina</td></tr>
+<tr><td><tt>\onequarter</tt></td><td>0x00BC</td><td>První mocnina</td></tr>
+<tr><td><tt>\twosuperior</tt></td><td>0x00B2</td><td>Druhá mocnina</td></tr>
+<tr><td><tt>\threesuperior</tt></td><td>0x00B3</td><td>Třetí mocnina</td></tr>
+<tr><td><tt>\ohm</tt></td><td>0x03A9</td><td>jednotka pro rezistivitu (velké řecké písmeno Omega)</td></tr>
 </table>
 <br>
 
-<br><a href="#top">back to the top</a><br>
+<br><a href="#top">Nahoru</a><br>
 
 </body>
 </html>
