@@ -1,5 +1,4 @@
 <html>
-
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name="Author" content="Martin Stejskal">
@@ -25,9 +24,9 @@ Nápověda - hlavní menu<br><br>
 <a href="short.html">Krátký popis k ovládání</a><br>
 <a href="subcircuit.html">Práce s vnořenými obvody</a><br>
 <a href="mathfunc.html">Krátký popis matematických funkcí&nbsp;(Částečně přeloženo)</a><br>
-<a href="characters.html">Seznam speciálních začek&nbsp;(Anglicky)</a><br>
+<a href="characters.html">Seznam speciálních symbolů</a><br>
 <a href="matching.html">Vytváření laděných obvodů&nbsp;(Anglicky)</a><br>
-<a href="programs.html">Popis k nainstalovaným souborům Qucs&nbsp;(Anglicky)</a><br>
+<a href="programs.html">Popis k nainstalovaným souborům Qucs</a><br>
 <a href="internal.html">Popis k formátu Qucs souborů&nbsp;(Anglicky)</a><br>
 
 <br>
@@ -41,6 +40,6 @@ http://qucs.sourceforge.net/tech/technical.html</a>&nbsp;(anglicky)<br>
 <a href="http://qucs.sourceforge.net/download.html#example">
 http://qucs.sourceforge.net/download.html#example</a>&nbsp;(anglicky)<br>
 <br>
-Na překladu se stále pracuje... Jakékoliv připomínky k překladu zasílejte na <a href="mailto:k1ll3r@email.cz" title="Mail">k1ll3r@email.cz</a>
+Na překladu se stále pracuje... Jakékoliv připomínky k překladu zasílejte na <tt>k1ll3r@email.cz</tt>
 </body>
 </html>
